--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,23 @@
+buildscript {
+    ext {
+        kotlin_version = '1.6.21'
+        archLifecycleVersion = '1.1.1'
+        gradleVersion = '7.1.3'
+        dataBindingCompilerVersion = gradleVersion // Always need to be the same.
+        navigationVersion = "2.4.2"
+    }
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:$gradleVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.1.3' apply false
