--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyLoginApplication">
         <activity
-            android:name=".Second"
+            android:name=".SegundaActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
